k3s/ctfd_configs/ctfd-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctfd
  creationTimestamp: null
  labels:
    ctfd: mysql
    app: ctfd-mysql-db
  name: ctfd-mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        ctfd: mysql
        app: ctfd-mysql-db
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --wait_timeout=28800
            - --log-warnings=0
          image: mariadb:10.4.12
          imagePullPolicy: ""
          name: ctfd-mysql-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: ctfd-mysql-db-pv
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
        - name: ctfd-mysql-db-pv
          persistentVolumeClaim:
            claimName: ctfd-mysql-db-pv
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ctfd
  creationTimestamp: null
  labels:
    app: ctfd-mysql-db
  name: ctfd-mysql-db
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: ctfd-mysql-db
  type: ClusterIP
status: {}
